// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Product Comparison/MultiColumnComparison Empty smoke-test 1`] = `
<div data-theme="light">
  <div style="padding: 20px;">
    <div>
      <div class="basic-multi-select css-b62m3t-container">
        <span id="react-select-2-live-region"
              class="css-1f43avz-a11yText-A11yText"
        >
        </span>
        <span aria-live="polite"
              aria-atomic="false"
              aria-relevant="additions text"
              role="log"
              class="css-1f43avz-a11yText-A11yText"
        >
        </span>
        <div class="select-internal__control css-1yx4vts-control">
          <div class="select-internal__value-container select-internal__value-container--is-multi css-hlgwow"
               style="display: grid;"
          >
            <div class="select-internal__placeholder css-1jqq78o-placeholder"
                 id="react-select-2-placeholder"
            >
              Select...
            </div>
            <div class="select-internal__input-container css-uji2aa"
                 data-value
            >
              <input class="select-internal__input"
                     autocapitalize="none"
                     autocomplete="off"
                     autocorrect="off"
                     id="react-select-2-input"
                     spellcheck="false"
                     tabindex="0"
                     type="text"
                     aria-autocomplete="list"
                     aria-expanded="false"
                     aria-haspopup="true"
                     role="combobox"
                     aria-activedescendant
                     aria-describedby="react-select-2-placeholder"
                     value
                     style="color: inherit; background: 0px center; opacity: 1; width: 100%; grid-area: 1 / 2; font: inherit; min-width: 2px; border: 0px; margin: 0px; outline: 0px; padding: 0px;"
              >
            </div>
          </div>
          <div class="select-internal__indicators css-1wy0on6">
            <span class="select-internal__indicator-separator css-1u9des2-indicatorSeparator">
            </span>
            <div class="select-internal__indicator select-internal__dropdown-indicator css-1xc3v61-indicatorContainer"
                 aria-hidden="true"
            >
              <svg height="20"
                   width="20"
                   viewbox="0 0 20 20"
                   aria-hidden="true"
                   focusable="false"
                   class="css-tj5bde-Svg"
              >
                <path d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z">
                </path>
              </svg>
            </div>
          </div>
        </div>
        <div>
          <input name="products"
                 type="hidden"
                 value
          >
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Product Comparison/MultiColumnComparison WithThreeProducts smoke-test 1`] = `
<div data-theme="light">
  <div style="padding: 20px;">
    <div>
      <div class="basic-multi-select css-b62m3t-container">
        <span id="react-select-4-live-region"
              class="css-1f43avz-a11yText-A11yText"
        >
        </span>
        <span aria-live="polite"
              aria-atomic="false"
              aria-relevant="additions text"
              role="log"
              class="css-1f43avz-a11yText-A11yText"
        >
        </span>
        <div class="select-internal__control css-1yx4vts-control">
          <div class="select-internal__value-container select-internal__value-container--is-multi css-hlgwow"
               style="display: grid;"
          >
            <div class="select-internal__placeholder css-1jqq78o-placeholder"
                 id="react-select-4-placeholder"
            >
              Select...
            </div>
            <div class="select-internal__input-container css-uji2aa"
                 data-value
            >
              <input class="select-internal__input"
                     autocapitalize="none"
                     autocomplete="off"
                     autocorrect="off"
                     id="react-select-4-input"
                     spellcheck="false"
                     tabindex="0"
                     type="text"
                     aria-autocomplete="list"
                     aria-expanded="false"
                     aria-haspopup="true"
                     role="combobox"
                     aria-activedescendant
                     aria-describedby="react-select-4-placeholder"
                     value
                     style="color: inherit; background: 0px center; opacity: 1; width: 100%; grid-area: 1 / 2; font: inherit; min-width: 2px; border: 0px; margin: 0px; outline: 0px; padding: 0px;"
              >
            </div>
          </div>
          <div class="select-internal__indicators css-1wy0on6">
            <span class="select-internal__indicator-separator css-1u9des2-indicatorSeparator">
            </span>
            <div class="select-internal__indicator select-internal__dropdown-indicator css-1xc3v61-indicatorContainer"
                 aria-hidden="true"
            >
              <svg height="20"
                   width="20"
                   viewbox="0 0 20 20"
                   aria-hidden="true"
                   focusable="false"
                   class="css-tj5bde-Svg"
              >
                <path d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z">
                </path>
              </svg>
            </div>
          </div>
        </div>
        <div>
          <input name="products"
                 type="hidden"
                 value
          >
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Product Comparison/MultiColumnComparison WithTwoProducts smoke-test 1`] = `
<div data-theme="light">
  <div data-theme="light">
    <div style="padding: 20px;">
      <div>
        <div class="basic-multi-select css-b62m3t-container">
          <span id="react-select-3-live-region"
                class="css-1f43avz-a11yText-A11yText"
          >
          </span>
          <span aria-live="polite"
                aria-atomic="false"
                aria-relevant="additions text"
                role="log"
                class="css-1f43avz-a11yText-A11yText"
          >
          </span>
          <div class="select-internal__control css-1yx4vts-control">
            <div class="select-internal__value-container select-internal__value-container--is-multi css-hlgwow"
                 style="display: grid;"
            >
              <div class="select-internal__placeholder css-1jqq78o-placeholder"
                   id="react-select-3-placeholder"
              >
                Select...
              </div>
              <div class="select-internal__input-container css-uji2aa"
                   data-value
              >
                <input class="select-internal__input"
                       autocapitalize="none"
                       autocomplete="off"
                       autocorrect="off"
                       id="react-select-3-input"
                       spellcheck="false"
                       tabindex="0"
                       type="text"
                       aria-autocomplete="list"
                       aria-expanded="false"
                       aria-haspopup="true"
                       role="combobox"
                       aria-activedescendant
                       aria-describedby="react-select-3-placeholder"
                       value
                       style="color: inherit; background: 0px center; opacity: 1; width: 100%; grid-area: 1 / 2; font: inherit; min-width: 2px; border: 0px; margin: 0px; outline: 0px; padding: 0px;"
                >
              </div>
            </div>
            <div class="select-internal__indicators css-1wy0on6">
              <span class="select-internal__indicator-separator css-1u9des2-indicatorSeparator">
              </span>
              <div class="select-internal__indicator select-internal__dropdown-indicator css-1xc3v61-indicatorContainer"
                   aria-hidden="true"
              >
                <svg height="20"
                     width="20"
                     viewbox="0 0 20 20"
                     aria-hidden="true"
                     focusable="false"
                     class="css-tj5bde-Svg"
                >
                  <path d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z">
                  </path>
                </svg>
              </div>
            </div>
          </div>
          <div>
            <input name="products"
                   type="hidden"
                   value
            >
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
